components/radix-platform/radix-app-ingresses/charts/namespace.api.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: radix-api-${RADIX_APP_ENV:=tba}
  labels:
    radix-app: radix-api
    radix-env: ${RADIX_APP_ENV:=tba}
