components/radix-platform/radix-app-ingresses/charts/namespace.canary.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: radix-canary-golang-${RADIX_APP_ENV:=tba}
  labels:
    radix-app: radix-canary-golang
    radix-env: ${RADIX_APP_ENV:=tba}
