components/radix-platform/radix-app-ingresses/charts/namespace.console.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: radix-web-console-${RADIX_APP_ENV:=tba}
