components/radix-platform/radix-app-ingresses/charts/namespace.public-site.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: radix-public-site-${RADIX_APP_ENV:=tba}
