components/radix-platform/radix-app-ingresses/charts/ingress.console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    radix-app: radix-web-console
    radix-component: auth
  name: auth.custom-domain
  namespace: radix-web-console-${RADIX_APP_ENV:=tba}
spec:
  ingressClassName: nginx
  rules:
    - host: console.${AZ_RESOURCE_DNS:=tba}
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8000
  tls:
    - hosts:
        - console.${AZ_RESOURCE_DNS:=tba}
      secretName: "radix-wildcard-tls-cert"
