components/radix-platform/radix-app-ingresses/charts/ingress.cost-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    radix-app: radix-cost-allocation-api
    radix-component: server
  name: server.custom-domain
  namespace: radix-cost-allocation-api-${RADIX_APP_ENV:=tba}
spec:
  ingressClassName: nginx
  rules:
    - host: cost-api.${AZ_RESOURCE_DNS:=tba}
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 3003
  tls:
    - hosts:
        - cost-api.${AZ_RESOURCE_DNS:=tba}
      secretName: "radix-wildcard-tls-cert"
