components/radix-platform/radix-app-ingresses/charts/ingress.webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    radix-app: radix-github-webhook
    radix-component: webhook
  name: webhook.custom-domain
  namespace: radix-github-webhook-${RADIX_APP_ENV:=tba}
spec:
  ingressClassName: nginx
  rules:
    - host: webhook.${AZ_RESOURCE_DNS:=tba}
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: webhook
                port:
                  number: 3001
    - host: webhook.${clusterName:=tba}.${AZ_RESOURCE_DNS:=tba}
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: webhook
                port:
                  number: 3001
  tls:
    - hosts:
        - webhook.${AZ_RESOURCE_DNS:=tba}
        - webhook.${clusterName:=tba}.${AZ_RESOURCE_DNS:=tba}
      secretName: "radix-wildcard-tls-cert"
